--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "is-svg": "4.2.2",
     "minimist": "^1.2.3",
     "node-forge": "^0.10.0",
+    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -36,5 +37,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
+  },
+  "engines": {
+    "node": "14.18.1"
   }
 }
