--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-use": "^17.4.0",
     "react_ujs": "^2.6.1",
     "serialize-javascript": "^3.1.0",
     "sockjs": "0.3.20",
